k8s/dnsutils-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dnsutils-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    service: dnsutils-headless
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dnsutils-headless
  labels:
    service: dnsutils-headless
spec:
  replicas: 1
  serviceName: dnsutils-headless
  selector:
    matchLabels:
      service: dnsutils-headless
  template:
    metadata:
      labels:
        service: dnsutils-headless
    spec:
      containers:
        - name: dnsutils-headless
          image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
          command:
            - sleep
            - "3600"
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
