k8s/echo-double-one.yaml
# The echo-double-one service exposes two ports, 80 and 81 and directs them to one single container
---
apiVersion: v1
kind: Service
metadata:
  name: "echo-double-one"
spec:
  type: ClusterIP
  selector:
    service: echo-double-one
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: extra
      port: 81
      targetPort: extra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "echo-double-one"
  labels:
    service: echo-double-one
spec:
  replicas: 1
  selector:
    matchLabels:
      service: echo-double-one
  template:
    metadata:
      labels:
        service: echo-double-one
    spec:
      containers:
        - name: echo-double
          image: multi:5000/tel2/echo
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: extra
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
