k8s/echo-manual-inject-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "manual-inject"
spec:
  type: ClusterIP
  selector:
    service: manual-inject
  ports:
    - port: 80
