k8s/echo-w-subdomain.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: subsonic
spec:
  selector:
    service: subsonic
  clusterIP: None
  ports:
    - name: proxied
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-subsonic
  labels:
    service: subsonic
spec:
  replicas: 1
  selector:
    matchLabels:
      service: subsonic
  template:
    metadata:
      labels:
        service: subsonic
    spec:
      hostname: echo
      subdomain: subsonic
      containers:
        - name: echo
          image: jmalloc/echo-server
          ports:
            - containerPort: 8080
              name: http
