k8s/ext-example.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ext-example
spec:
  type: ExternalName
  externalName: example.com
