k8s/hello-w-volume.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: ClusterIP
  selector:
    service: hello
  ports:
    - name: proxied
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    service: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      service: hello
  template:
    metadata:
      labels:
        service: hello
    spec:
      volumes:
        - name: hello-storage
          persistentVolumeClaim:
            claimName: hello-claim
      containers:
        - name: hello-container
          image: nginx
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: hello-storage
