k8s/httpbin.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: teleproxied-httpbin
spec:
  selector:
    pod: teleproxied-httpbin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: teleproxied-httpbin
  labels:
    pod: teleproxied-httpbin
spec:
  containers:
  - name: backend
    image: kennethreitz/httpbin
    ports:
    - containerPort: 80
