k8s/local-echo-easy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "echo-easy"
spec:
  type: ClusterIP
  selector:
    app: echo-easy
  ports:
    - name: proxied
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "echo-easy"
  labels:
    app: echo-easy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-easy
  template:
    metadata:
      labels:
        app: echo-easy
    spec:
      containers:
        - name: echo-easy
          image: localhost:5000/echo-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
