k8s/manager.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traffic-manager
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: traffic-manager
    telepresence: manager
  ports:
  - name: sshd
    port: 8022
    targetPort: sshd
  - name: api
    port: 8081
    targetPort: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-manager
  labels:
    app: traffic-manager
    telepresence: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-manager
      telepresence: manager
  template:
    metadata:
      labels:
        app: traffic-manager
        telepresence: manager
    spec:
      containers:
      - name: traffic-manager
        image: ko://github.com/datawire/telepresence2/cmd/traffic
        ports:
        - name: sshd
          containerPort: 8022
        - name: api
          containerPort: 8081
      restartPolicy: Always
