k8s/rs-echo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rs-echo
spec:
  type: ClusterIP
  selector:
    service: rs-echo
  ports:
    - name: http
      port: 80
      targetPort: 8080
