k8s/sample-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      service: sample-app
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: 'false'
        sidecar.istio.io/inject: 'false'
      labels:
        service: sample-app
    spec:
      containers:
        - name: sample-app
          image: gcr.io/datawire/k8s-initializer-sample-app:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          ports:
            - containerPort: 3000
              name: http
      restartPolicy: Always
      securityContext:
        runAsUser: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    service: sample-app
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    service: sample-app
