k8s/agent-injector.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: agent-injector
  namespace: ambassador
spec:
  type: ClusterIP
  selector:
    app: traffic-manager
    telepresence: manager
  ports:
    - name: agent-injector
      port: 8443
      targetPort: https
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: agent-injector-webhook
webhooks:
  - name: agent-injector.telepresence.io
    clientConfig:
      service:
        name: agent-injector
        namespace: ambassador
        path: "/traffic-agent"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZGVENDQXYyZ0F3SUJBZ0lFRHY3S3NEQU5CZ2txaGtpRzl3MEJBUXNGQURBYk1Sa3dGd1lEVlFRS0V4Qm4KWlhSaGJXSmhjM05oWkc5eUxtbHZNQjRYRFRJeE1EWXdPVEEyTVRnd09Wb1hEVEl5TURZd09UQTJNVGd3T1ZvdwpHekVaTUJjR0ExVUVDaE1RWjJWMFlXMWlZWE56WVdSdmNpNXBiekNDQWlJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnSVBBRENDQWdvQ2dnSUJBTjdrbzROZHMvZTdvaVU0WGM1Rm5DcUlTNDNnZ01Zd2MrR1huaW9zQk50R000K00KMEFiODgweUx2WlRQTURoSVJQbmtlSm9UeThhN3NETVRQcHdtc2tmZFNJRjNRQlVKSlc3ZGNpaWI3Y3lmTzdUWgp2UmM0YW5SSXpY [...]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    admissionReviewVersions: ["v1"]
    timeoutSeconds: 5
